@@ -1,9 +1,6 @@
 package org.example;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class FindMaximumSalaryFromDepartment {
@@ -14,12 +11,11 @@ public class FindMaximumSalaryFromDepartment {
                         Collectors.collectingAndThen(
                                 Collectors.maxBy(Comparator.comparing(Employee::getSalary)), Optional::get)
                         ));
-
         return highestSalaries;
     }
 
     public static void main(String[] args) {
-        List<Employee> employees = List.of(
+        List<Employee> employees = Arrays.asList(
                 new Employee(1, "Alice", 70000, "IT"),
                 new Employee(2, "Bob", 80000, "HR"),
                 new Employee(3, "Charlie", 75000, "IT"),
@@ -27,11 +23,18 @@ public class FindMaximumSalaryFromDepartment {
                 new Employee(5, "Eve", 90000, "HR")
         );
 
+
         Map<String, Employee> highestSalaries = getHighestSalaryByDept(employees);
         highestSalaries.forEach((dept, emp) ->
                 System.out.println(dept + " -> " + emp));
-    }
 
+        List<String> empNames = employees.stream()
+                .filter(e-> e.getSalary() > 40000)
+                .map(Employee::getName)
+                .toList();
+
+        System.out.println("List of employees having salaries more than 40K :: " + empNames);
+    }
 
 
     static class Employee {
